--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div><!--Penny Image Display, Button Controls, and Status Message-->
+                <img id="img" src="https://via.placeholder.com/200" alt="Penny Image Display">
+            </div>
+            <div>
+                <button id="button1">Flip the Coin</button>
+                <h3 id="theFlip">Result: </h3>
+                <button id="button2">Start Over</button>
+            </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
